fix: Disable overflow clip in Safari

--- a/src/components/hypePage/roadmap/background/background.module.css
+++ b/src/components/hypePage/roadmap/background/background.module.css
@@ -7,7 +7,6 @@
     width: 100%;
     height: 100%;
     z-index: -100;
-    overflow-y: clip;
     user-select: none;
 }
 
